--- a/Week7 Code Assignment/w7_part2/3/index.html
+++ b/Week7 Code Assignment/w7_part2/3/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-<head>s
+<head>
     <script src="d3.js"></script>
 </head>
 <body>
-    <script src="anscombe.js"></script>
-    <svg width="400" height="400"></svg>
+    <div id="chart"></div>
+	<script src="charts.js"></script>
 </body>
 </html>
