--- a/Week7 Code Assignment/w7_part1/index.html
+++ b/Week7 Code Assignment/w7_part1/index.html
@@ -2,7 +2,9 @@
 <meta charset="utf-8">
 <html>
 <head>
+    <script src="d3.js"></script>
 </head>
 <body>
+    <script src="anscombe.js"></script>
 </body>
 </html>
